// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectFilter should render the component with items having icons 1`] = `
<div
  class="dropdown"
>
  <button
    aria-expanded="false"
    aria-haspopup="true"
    class="mr-2 dropdown-toggle btn btn-secondary"
    type="button"
  >
    <span>
      All items
    </span>
  </button>
  <div
    aria-hidden="true"
    class="dropdown dropdown-menu dropdown-menu-right"
    role="menu"
    tabindex="-1"
  >
    <h6
      class="dropdown-item-input dropdownItemInput dropdown-header"
      tabindex="-1"
    >
      <input
        class="form-control"
        placeholder="Search items..."
        type="text"
        value=""
      />
    </h6>
    <button
      class="component dropdown-item"
      role="menuitem"
      tabindex="0"
    >
      <div
        class="checkbox"
      >
        <label
          class="label quickSelectionOption"
          for="checkbox-6"
        >
          <input
            class="input"
            id="checkbox-6"
            name="checkbox-6"
            type="checkbox"
          />
          Select displayed
          <div
            class="badge"
          >
            3
          </div>
        </label>
        <div
          class="caption"
        />
      </div>
    </button>
    <div
      class="dropdownDivider dropdown-divider"
      tabindex="-1"
    />
    <div
      class="content"
    >
      <div
        class="wrapperItem"
      >
        <label
          class="label labelItem"
          for="checkbox-7"
        >
          <input
            class="input"
            id="checkbox-7"
            name="checkbox-7"
            type="checkbox"
          />
          <i
            class="icon material-icons icon"
          >
            api
          </i>
           Api
        </label>
        <div
          class="caption"
        />
      </div>
      <div
        class="wrapperItem"
      >
        <label
          class="label labelItem"
          for="checkbox-8"
        >
          <input
            class="input"
            id="checkbox-8"
            name="checkbox-8"
            type="checkbox"
          />
          <i
            class="icon material-icons icon"
          >
            chat
          </i>
           Chat
        </label>
        <div
          class="caption"
        />
      </div>
      <div
        class="wrapperItem"
      >
        <label
          class="label labelItem"
          for="checkbox-9"
        >
          <input
            class="input"
            id="checkbox-9"
            name="checkbox-9"
            type="checkbox"
          />
          <i
            class="icon material-icons icon"
          >
            email
          </i>
           Email
        </label>
        <div
          class="caption"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectFilter should render the component with selectable items 1`] = `
<div
  class="dropdown"
>
  <button
    aria-expanded="false"
    aria-haspopup="true"
    class="mr-2 dropdown-toggle btn btn-secondary"
    type="button"
  >
    <span>
      All items
    </span>
  </button>
  <div
    aria-hidden="true"
    class="dropdown dropdown-menu dropdown-menu-right"
    role="menu"
    tabindex="-1"
  >
    <h6
      class="dropdown-item-input dropdownItemInput dropdown-header"
      tabindex="-1"
    >
      <input
        class="form-control"
        placeholder="Search items..."
        type="text"
        value=""
      />
    </h6>
    <button
      class="component dropdown-item"
      role="menuitem"
      tabindex="0"
    >
      <div
        class="checkbox"
      >
        <label
          class="label quickSelectionOption"
          for="checkbox-2"
        >
          <input
            class="input"
            id="checkbox-2"
            name="checkbox-2"
            type="checkbox"
          />
          Select displayed
          <div
            class="badge"
          >
            3
          </div>
        </label>
        <div
          class="caption"
        />
      </div>
    </button>
    <div
      class="dropdownDivider dropdown-divider"
      tabindex="-1"
    />
    <div
      class="content"
    >
      <div
        class="wrapperItem"
      >
        <label
          class="label labelItem"
          for="checkbox-3"
        >
          <input
            class="input"
            id="checkbox-3"
            name="checkbox-3"
            type="checkbox"
          />
           Api
        </label>
        <div
          class="caption"
        />
      </div>
      <div
        class="wrapperItem"
      >
        <label
          class="label labelItem"
          for="checkbox-4"
        >
          <input
            class="input"
            id="checkbox-4"
            name="checkbox-4"
            type="checkbox"
          />
           Chat
        </label>
        <div
          class="caption"
        />
      </div>
      <div
        class="wrapperItem"
      >
        <label
          class="label labelItem"
          for="checkbox-5"
        >
          <input
            class="input"
            id="checkbox-5"
            name="checkbox-5"
            type="checkbox"
          />
           Email
        </label>
        <div
          class="caption"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectFilter should render the component with selected items 1`] = `
<div
  class="dropdown"
>
  <button
    aria-expanded="false"
    aria-haspopup="true"
    class="mr-2 dropdown-toggle btn btn-secondary"
    type="button"
  >
    <span>
      2 items
    </span>
  </button>
  <div
    aria-hidden="true"
    class="dropdown dropdown-menu dropdown-menu-right"
    role="menu"
    tabindex="-1"
  >
    <h6
      class="dropdown-item-input dropdownItemInput dropdown-header"
      tabindex="-1"
    >
      <input
        class="form-control"
        placeholder="Search items..."
        type="text"
        value=""
      />
    </h6>
    <button
      class="component dropdown-item"
      role="menuitem"
      tabindex="0"
    >
      <div
        class="checkbox"
      >
        <label
          class="label quickSelectionOption"
          for="checkbox-10"
        >
          <input
            checked=""
            class="input"
            id="checkbox-10"
            name="checkbox-10"
            type="checkbox"
          />
          Deselect all
          <div
            class="badge badge--unselect"
          >
            2
          </div>
        </label>
        <div
          class="caption"
        />
      </div>
    </button>
    <div
      class="dropdownDivider dropdown-divider"
      tabindex="-1"
    />
    <div
      class="content"
    >
      <div
        class="wrapperItem"
      >
        <label
          class="label labelItem"
          for="checkbox-11"
        >
          <input
            checked=""
            class="input"
            id="checkbox-11"
            name="checkbox-11"
            type="checkbox"
          />
           Api
        </label>
        <div
          class="caption"
        />
      </div>
      <div
        class="wrapperItem"
      >
        <label
          class="label labelItem"
          for="checkbox-12"
        >
          <input
            checked=""
            class="input"
            id="checkbox-12"
            name="checkbox-12"
            type="checkbox"
          />
           Chat
        </label>
        <div
          class="caption"
        />
      </div>
      <div
        class="wrapperItem"
      >
        <label
          class="label labelItem"
          for="checkbox-13"
        >
          <input
            class="input"
            id="checkbox-13"
            name="checkbox-13"
            type="checkbox"
          />
           Email
        </label>
        <div
          class="caption"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectFilter should render the component without any item 1`] = `
<div
  class="dropdown"
>
  <button
    aria-expanded="false"
    aria-haspopup="true"
    class="mr-2 dropdown-toggle btn btn-secondary"
    type="button"
  >
    <span>
      All items
    </span>
  </button>
  <div
    aria-hidden="true"
    class="dropdown dropdown-menu dropdown-menu-right"
    role="menu"
    tabindex="-1"
  >
    <h6
      class="dropdown-item-input dropdownItemInput dropdown-header"
      tabindex="-1"
    >
      <input
        class="form-control"
        placeholder="Search items..."
        type="text"
        value=""
      />
    </h6>
    <button
      class="component dropdown-item"
      role="menuitem"
      tabindex="0"
    >
      <div
        class="checkbox"
      >
        <label
          class="label quickSelectionOption"
          for="checkbox-1"
        >
          <input
            class="input"
            id="checkbox-1"
            name="checkbox-1"
            type="checkbox"
          />
          Select displayed
          <div
            class="badge"
          >
            0
          </div>
        </label>
        <div
          class="caption"
        />
      </div>
    </button>
    <div
      class="dropdownDivider dropdown-divider"
      tabindex="-1"
    />
    <div
      class="content"
    />
  </div>
</div>
`;

exports[`SelectFilter with groups should render the component with groups 1`] = `
<div
  class="dropdown"
>
  <button
    aria-expanded="false"
    aria-haspopup="true"
    class="mr-2 dropdown-toggle btn btn-secondary"
    type="button"
  >
    <span>
      All items
    </span>
  </button>
  <div
    aria-hidden="true"
    class="dropdown dropdown-menu dropdown-menu-right"
    role="menu"
    tabindex="-1"
  >
    <h6
      class="dropdown-item-input dropdownItemInput dropdown-header"
      tabindex="-1"
    >
      <input
        class="form-control"
        placeholder="Search items..."
        type="text"
        value=""
      />
    </h6>
    <button
      class="component dropdown-item"
      role="menuitem"
      tabindex="0"
    >
      <div
        class="checkbox"
      >
        <label
          class="label quickSelectionOption"
          for="checkbox-25"
        >
          <input
            class="input"
            id="checkbox-25"
            name="checkbox-25"
            type="checkbox"
          />
          Select displayed
          <div
            class="badge"
          >
            3
          </div>
        </label>
        <div
          class="caption"
        />
      </div>
    </button>
    <div
      class="dropdownDivider dropdown-divider"
      tabindex="-1"
    />
    <div
      class="content"
    >
      <div
        class="wrapperItem"
      >
        <label
          class="label labelItem"
          for="checkbox-26"
        >
          <input
            class="input"
            id="checkbox-26"
            name="checkbox-26"
            type="checkbox"
          />
           Api
        </label>
        <div
          class="caption"
        />
      </div>
      <div
        class="wrapperItem"
      >
        <label
          class="label labelItem"
          for="checkbox-27"
        >
          <input
            class="input"
            id="checkbox-27"
            name="checkbox-27"
            type="checkbox"
          />
           Chat
        </label>
        <div
          class="caption"
        />
      </div>
      <div
        class="wrapperItem"
      >
        <label
          class="label labelItem"
          for="checkbox-28"
        >
          <input
            class="input"
            id="checkbox-28"
            name="checkbox-28"
            type="checkbox"
          />
           Email
        </label>
        <div
          class="caption"
        />
      </div>
      <div
        class="wrapperItem"
      >
        <label
          class="label labelItem"
          for="checkbox-29"
        >
          <input
            class="input"
            id="checkbox-29"
            name="checkbox-29"
            type="checkbox"
          />
          Group 1
        </label>
        <div
          class="caption"
        />
      </div>
      <div
        class="wrapperItem"
      >
        <label
          class="label labelItem"
          for="checkbox-30"
        >
          <input
            class="input"
            id="checkbox-30"
            name="checkbox-30"
            type="checkbox"
          />
          Group 2
        </label>
        <div
          class="caption"
        />
      </div>
      <div
        class="wrapperItem"
      >
        <label
          class="label labelItem"
          for="checkbox-31"
        >
          <input
            class="input"
            id="checkbox-31"
            name="checkbox-31"
            type="checkbox"
          />
          Group 3
        </label>
        <div
          class="caption"
        />
      </div>
    </div>
  </div>
</div>
`;
